<resources>
    <string name="app_name">Trick</string>
    <string name="images_file_path">Android/data/com.appschef.trick/files/Pictures</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="add_text">Add Text</string>
    <string name="add_sticker">Add Sticker</string>
    <string name="share">Share</string>
</resources>