<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/diary9"
    tools:context=".Editor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/editor_menu"
        app:title="Editor"
        app:titleTextColor="@color/white" />

    <com.xiaopo.flying.sticker.StickerView
        android:layout_below="@id/toolbar"
        android:id="@+id/sticker_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="5dp"
        android:layout_above="@id/linear"
        app:layout_constraintBottom_toTopOf="@id/linear"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/trans" />
    </com.xiaopo.flying.sticker.StickerView>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <LinearLayout
            android:id="@+id/addsticker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_baseline_imagesearch_roller_24"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_sticker"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/addtext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_baseline_text_fields_24"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_text"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>